Changed LocalFileSystemAccess to not break on attempting to access a non-existant file.
Renamed in FileAccessor from getUrlContent to just getContent since the method no longer takes an actual URL.