@@ -1,6 +1,5 @@
 package io.github.thisisnozaku.charactercreator.data.access;
 
-import com.amazonaws.services.s3.model.S3ObjectInputStream;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 
@@ -8,6 +7,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
@@ -20,20 +20,35 @@ import java.util.List;
 import java.util.Optional;
 
 /**
+ * Implementation of FileAccessor for use with a local file system.
  * Created by Damien on 9/11/2016.
  */
 @Profile("dev")
 @Service
 public class LocalFileSystemAccess implements FileAccessor {
+    private final org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(LocalFileSystemAccess.class);
+
     @Override
     public FileInformation getFileInformation(String path) {
         try {
-            File file = new File(path);
-            return new FileInformation(file.toURI().toURL(), Instant.ofEpochMilli(file.lastModified()));
-        } catch (MalformedURLException e) {
+            URL url = new URL(path);
+            File f = null;
+            try {
+                f = new File(url.toURI());
+            } catch (IllegalArgumentException ex) {
+                logger.warn("Path {} is an invalid file URL. Reason: {} Timestamp information is unavailable.", url.toExternalForm(), ex.getMessage());
+            }
+            Long timestamp = f != null ? f.lastModified() : Instant.now().toEpochMilli();
+            return new FileInformation(url, Instant.ofEpochMilli(Math.max(timestamp, Instant.now().toEpochMilli())));
+        } catch (MalformedURLException | URISyntaxException e) {
             e.printStackTrace();
             return null;
         }
+    }
+
+    @Override
+    public FileInformation getFileInformation(URL path) {
+        return getFileInformation(path != null ? path.toExternalForm() : null);
     }
 
     @Override
@@ -45,22 +60,22 @@ public class LocalFileSystemAccess implements FileAccessor {
                 stream.forEach(filePath -> {
                     try {
                         urls.add(new FileInformation(filePath.toUri().toURL(), Instant.ofEpochMilli(Files.readAttributes(filePath, BasicFileAttributes.class).creationTime().toMillis())));
-                    } catch (IOException ex){
+                    } catch (IOException ex) {
                         ex.printStackTrace();
                     }
                 });
             }
-        } catch (IOException ex){
+        } catch (IOException ex) {
             throw new RuntimeException(ex);
         }
         return urls;
     }
 
     @Override
-    public Optional<InputStream> getUrlContent(URL path) {
+    public Optional<InputStream> getContent(FileInformation path) {
         try {
-            return Optional.of(path.openStream());
-        }catch (IOException ex){
+            return Optional.of(path.getFileUrl().openStream());
+        } catch (IOException ex) {
             throw new RuntimeException(ex);
         }
     }
